--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </style>
   </head>
   <body>
-    <script type="module" src="/tunnels.js"></script>
+    <script type="module" src="/starsAndRays.js"></script>
   </body>
 </html>
