Implement background switcher in index.html
Added background switcher controls and updated title.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Threejs back</title>
+    <title>Three.js Background Switcher</title>
     <style>
       body {
         margin: 0;
+        overflow: hidden;
+      }
+
+      #controls {
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 1000;
+      }
+
+      button {
+        display: block;
+        margin-bottom: 6px;
+        padding: 8px 12px;
+        cursor: pointer;
       }
     </style>
   </head>
   <body>
-    <script type="module" src="/starsAndRays.js"></script>
+    <div id="controls">
+      <button data-bg="starsAndRays.js">Stars & Rays</button>
+      <button data-bg="connectedDots.js">Connected Dots</button>
+      <button data-bg="digitalSea.js">Digital Sea</button>
+      <button data-bg="tunnels.js">Tunnels</button>
+    </div>
+
+    <script>
+      let currentScript = null;
+
+      function loadBackground(file) {
+        if (currentScript) {
+          currentScript.remove();
+          currentScript = null;
+        }
+        document.querySelectorAll("canvas").forEach(c => c.remove());
+
+        const script = document.createElement("script");
+        script.type = "module";
+        script.src = "/" + file;
+
+        document.body.appendChild(script);
+        currentScript = script;
+      }
+
+      document.querySelectorAll("button[data-bg]").forEach(button => {
+        button.addEventListener("click", () => {
+          loadBackground(button.dataset.bg);
+        });
+      });
+
+      loadBackground("starsAndRays.js");
+    </script>
   </body>
 </html>
+
