Update script source path in index.html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
         margin: 0;
         overflow: hidden;
       }
-
       #controls {
         position: fixed;
         top: 10px;
         left: 10px;
         z-index: 10;
       }
-
       button {
         display: block;
         margin-bottom: 6px;
@@ -27,6 +25,6 @@
       <button data-bg="connectedDots">Dots</button>
     </div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
