--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         margin-bottom: 6px;
       }
     </style>
+    <script type="importmap">
+{
+  "imports": {
+    "three": "https://cdn.jsdelivr.net/npm/three@0.182.0/build/three.module.js",
+    "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.182.0/examples/jsm/"
+  }
+}
+</script>
   </head>
   <body>
     <div id="controls">
